Added reservatopm system operator side. Updated endpoints. Minor fixes.
